chromium-browser (4.0.305.0~svn20100123r36929-0ubuntu1) UNRELEASED; urgency=low

  [ Fabien Tassin <fta@ubuntu.com> ]
  * Initial release. (Closes: #520324, LP: #387765)

  [ Alexander Sack <asac@ubuntu.com> ]
  * extensive license review; see copyright and copyright.problems;
    also see debian/licensecheck.pl for details how the copyright files are
    generated

 -- Alexander Sack <asac@ubuntu.com>  Tue, 26 Jan 2010 16:52:46 +0100